--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.cscheatsheet.MainActivity"
+        <activity android:name="com.example.cscheatsheet.MainActivity"></activity>
+        <activity android:name="com.example.cscheatsheet.RegisterActivity"></activity>
             />
     </application>
 
