--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <activity android:name="com.example.cscheatsheet.MainActivity"></activity>
         <activity android:name="com.example.cscheatsheet.fragments.flashcards.add_card_activity"></activity>
-        <activity android:name="com.example.cscheatsheet.RegisterActivity"></activity>
+        <activity android:name="com.example.cscheatsheet.SignUpActivity"></activity>
 
     </application>
 
