--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:23.1.0'
+
 }
